src/Components/ActionPlate/actionPlate.css
.action-plate-and-nav-container {
    padding: 0;
    box-sizing: border-box;
    width: 100%;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
}

.action-plate-container {
    width: 100%;
    box-sizing: border-box;
    flex-grow: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    max-height: 74vh;
    margin-bottom: 12px;
}

.action-plate {
    flex-basis: 85%;
    height: 89%;
    background: black;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #4e080b63, #77335a48, #b6662457);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #4e080b63, #77335a48, #b6662457); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    border-radius: 15px;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-shadow: 2px 1px 18px rgb(202, 202, 202);
    border: 1px thistle solid;
}

.active-switch {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 5px 0 0 0;
    height: 1.1rem;
}

.active-title-container {
    flex-basis: 40%;
    margin-left: 70px;
}

.active-title {
    font-family: 'Chakra Petch', sans-serif;
    font-size: .7rem;
    text-transform: uppercase;
    background: linear-gradient(to right, #f98b2f, #ff6068);
    background-clip: text;
    -webkit-text-fill-color: transparent;
    display:inline-block;
    -webkit-transform:scale(2.3,1); /* Safari and Chrome */
    -moz-transform:scale(2.3,1); /* Firefox */
    -ms-transform:scale(2.3,1); /* IE 9 */
    -o-transform:scale(2.3,1); /* Opera */
    transform:scale(2.3,1); /* W3C */
}

.switch {
    border: none;
    background-color: transparent;
    margin: 0 0 0 -70px;
    padding: 2px;
    font-size: 1.5rem;
    color: white;
}

.switch:focus {
    border: none;
    box-shadow: none;
}

.action-list {
    max-height: 47vh;
    width: 100%;
    overflow: auto;
    box-sizing: border-box;
    margin: 0;
}

.active-switch {
    display: flex;
    width: 100%;
    
}

h4 {
    padding: 0;
    margin: 0;
}

.action-list::-webkit-scrollbar {
    width: 9px;
}

.action-list::-webkit-scrollbar-track {
    background: transparent;
    margin: 10px;
}

.action-list::-webkit-scrollbar-thumb {
    background-color: rgba(0,0,0,0.5);
    border-radius: 20px;
    border: 3px solid transparent;
}

.add-item {
    margin: 3px 10px 10px 10px;
}

@media only screen and (min-height: 500px) {
    .action-list {
        max-height: 51vh;
    }
}

@media only screen and (min-height: 550px) {
    .action-list {
        max-height: 53.5vh;
    }
}

@media only screen and (min-height: 590px) {
    .action-list {
        max-height: 54.2vh;
    }
}

@media only screen and (min-height: 666px) {
    .action-list {
        max-height: 56.2vh;
    }
    .action-plate-container {
        max-height: 75vh;
    }
}

@media only screen and (min-height: 730px) {
    .action-list {
        max-height: 59vh;
    }
    .action-plate-container {
        max-height: 77vh;
    }
}

@media only screen and (min-height: 820px) {
    .action-list {
        max-height: 62.5vh;
    }
    .action-plate-container {
        max-height: 80vh;
    }
}

@media only screen and (min-height: 910px) {
    .action-list {
        max-height: 63.5vh;
    }
}

@media only screen and (min-height: 1000px) {
    .action-list {
        max-height: 65.8vh;
    }
    .action-plate-container {
        max-height: 82vh;
    }
}

@media only screen and (min-height: 1100px) {
    .action-list {
        max-height: 66.5vh;
    }
}

@media only screen and (min-height: 1200px) {
    .action-list {
        max-height: 67vh;
    }
}

@media only screen and (min-height: 1300px) {
    .action-list {
        max-height: 70vh;
    }
    .action-plate-container {
        max-height: 85vh;
    }
}

